--- a/templates/adminPage/detalleProducto.html.twig
+++ b/templates/adminPage/detalleProducto.html.twig
@@ -56,7 +56,7 @@
                                          <small class="text-muted d-block pt-10">Unidades en stock</small>
                                         <h6>{{productos.unidadesStock}}</h6>
                                          <small class="text-muted d-block pt-10">Categoría</small>
-                                        <h6>{{productos.categoria}}</h6>
+                                        {# <h6>{{productos.categoria}}</h6> #}
                                         <small class="text-muted d-block pt-10">Unidades vendidas</small>
                                         <h6>{{productos.unidadesVendidas}}</h6>
                                     </div>
@@ -190,7 +190,7 @@
                                                     </div>
                                                     <div class="form-group">
                                                         <label for="newCategoria">Categoría</label>
-                                                        {{form_widget(form.categoria, {'attr':{'class':'form-control', "id":"newCategoria", "name":"newCategoria", "autocomplete":"family-name", 'placeholder':'Categoría'}})}}
+                                                        {# {{form_widget(form.categoria, {'attr':{'class':'form-control', "id":"newCategoria", "name":"newCategoria", "autocomplete":"family-name", 'placeholder':'Categoría'}})}} #}
                                                         {# <select name="newCategoria" id="newCategoria" class="form-control">
                                                             <option selected>{{productos.categoria}}</option>
                                                             <option>India</option>
