--- a/templates/page/layout.html.twig
+++ b/templates/page/layout.html.twig
@@ -142,7 +142,7 @@
     </dl>
 		<a href="#0" class="checkout-btn">Comprar</a>
 		
-		<p class="cd-go-to-cart"><a href="#0">Ir al carrito</a></p>
+		<p class="cd-go-to-cart"><a href="#0">Ir al carrito </a></p>
 		</div> <!-- cd-cart -->
 
 
@@ -169,7 +169,7 @@
 	  		</dl>
 
 			</div>
-					<p style="text-align:center;">No hay productos en el carrito</p>
+					<p style="text-align:center;">No hay productos en el carrito </p>
 			<a href="#0" onclick="javascript:mostrar()" class="checkout-btn">Comprar</a>
 			<p class="cd-go-to-cart"><a href="#0">Ir al carrito</a></p>
 			
@@ -197,7 +197,7 @@
 	  		</dl>
 
 			</div>
-					<p style="text-align:center;">No hay productos en el carrito</p>
+					<p style="text-align:center;">No hay productos en el carrito </p>
 			<a href="#0" onclick="javascript:mostrar()" class="checkout-btn">Comprar</a>
 			<p class="cd-go-to-cart"><a href="#0">Ir al carrito</a></p>
 			
@@ -213,6 +213,7 @@
     <i class="fa fa-user"></i>
     <input type="password" placeholder="Contraseña" name="password" id="password" />
     <i class="fa fa-key"></i>
+	<p style="color:red">{{mensaje}}<p>
     <a href="/login">¿Aún no estás registrado?</a>
     <button>
       <i class="spinner"></i>
