--- a/templates/page/productos.html.twig
+++ b/templates/page/productos.html.twig
@@ -6,37 +6,16 @@
 {% block contenido %}
 
 <section class="container">
-	<h1 style="text-align: center; margin-bottom:56px;">Productos</h1>
-			<div class="row">
-				<div class="col-6 col-lg-4" > <img src="img/thumb.jpg" alt="Preview image">
-					<div id="products"><p>Nombre del producto</p>
-					<p>Precio</p></div> </div>
-				<div class="col-6 col-lg-4"><img src="img/thumb.jpg" alt="Preview image">
-					<div id="products"><p>Nombre del producto</p>
-					<p>Precio</p></div> </div>
-				<div class="col-6 col-lg-4"><img src="img/thumb.jpg" alt="Preview image">
-					<div id="products"><p>Nombre del producto</p>
-					<p>Precio</p></div> </div>
-					<div class="col-6 col-lg-4" > <img src="img/thumb.jpg" alt="Preview image">
-						<div id="products"><p>Nombre del producto</p>
-						<p>Precio</p></div> </div>
-					<div class="col-6 col-lg-4"><img src="img/thumb.jpg" alt="Preview image">
-						<div id="products"><p>Nombre del producto</p>
-						<p>Precio</p></div> </div>
-					<div class="col-6 col-lg-4"><img src="img/thumb.jpg" alt="Preview image">
-						<div id="products"><p>Nombre del producto</p>
-						<p>Precio</p></div> </div>
-						<div class="col-6 col-lg-4" > <img src="img/thumb.jpg" alt="Preview image">
-							<div id="products"><p>Nombre del producto</p>
-							<p>Precio</p></div> </div>
-						<div class="col-6 col-lg-4"><img src="img/thumb.jpg" alt="Preview image">
-							<div id="products"><p>Nombre del producto</p>
-							<p>Precio</p></div> </div>
-						<div class="col-6 col-lg-4"><img src="img/thumb.jpg" alt="Preview image">
-							<div id="products"><p>Nombre del producto</p>
-							<p>Precio</p></div> </div>
-					</div>
-				</div>
 
+		<h1 style="text-align: center; margin-bottom:56px;">Productos</h1>
+
+			<div class="row">
+			{% for producto in productos %}
+				<div class="col-6 col-lg-4" > <img src="img/thumb.jpg" alt="Preview image">
+					<div id="products"><p style="width:219px;display: inline-block;margin-top: 10px;">{{producto.getNombre()}}</p>
+					<p>{{producto.getPrecio()}}</p></div> </div>
+					{% endfor %}
+				</div>
+		
 </section>
 {% endblock %}
