--- a/templates/page/registro.html.twig
+++ b/templates/page/registro.html.twig
@@ -153,8 +153,8 @@
           
             Contraseña<abbr title="Este campo es obligatorio">*</abbr>
           </label>
-           {{form_widget(form.contrasenya, {'attr':{'id':'Password', 'class':'form-element','name':'Password' ,'type':'password', "autocomplete":"new-password", 'placeholder':'Contraseña', "tabindex":"10", 'required':'', "aria-required":"true", "autofocus":""}})}}
-          {# <input id="Password" class="form-element" name="Password" type="password" autocomplete="new-password" placeholder="Contraseña"  tabindex="7" required aria-required="true" /> #}
+           {# {{form_widget(form.contrasenya, {'attr':{'id':'Password', 'class':'form-element','name':'Password' ,'type':'password', "autocomplete":"new-password", 'placeholder':'Contraseña', "tabindex":"10", 'required':'', "aria-required":"true", "autofocus":""}})}} #}
+          <input id="PasswordReg" class="form-element" name="PasswordReg" type="password" autocomplete="new-password" placeholder="Contraseña"  tabindex="7" required aria-required="true" />
         </div>
 </div>
     <!--   FORM => Honeypot   -->
