--- a/templates/adminPage/detalleProducto.html.twig
+++ b/templates/adminPage/detalleProducto.html.twig
@@ -35,6 +35,7 @@
 
                                                    {% for imagen in imagen|slice(1) %}
 						  	                            <img src="{{ruta}}{{imagen}}" width="200"/>
+                                                          {{dump(imagen)}}
     					                            {% endfor %}
                                             <h4 class="card-title mt-10">{{productos.nombre}}</h4>
                                             <div class="row text-center justify-content-md-center">
