--- a/templates/adminPage/prodcAdmin.html.twig
+++ b/templates/adminPage/prodcAdmin.html.twig
@@ -79,7 +79,7 @@
                                                                 </tr>
                                                             {% else %}
                                                                 <tr>
-                                                                    <td colspan="4">no records found</td>
+                                                                    <td colspan="8" align="center">no records found</td>
                                                                 </tr>
                                                             {% endfor %}
                                                 </tbody>
